--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -4,7 +4,7 @@
   "newHere": "¿Eres nuevo aquí?",
   "nostrAddress": "Dirección Nostr",
   "publicKey": "Clave pública",
-  "privateKey": "Clave privada",
+  "privateKey": "Clave privada (inseguro)",
   "browserExtension": "Extensión del navegador",
   "connect": "Conectar",
   "install": "Instalar",
@@ -15,5 +15,12 @@
   "publicKeyHint": "npub1...",
   "privateKeyHint": "nsec1...",
   "newToNostr": "¿Nuevo en Nostr?",
-  "getStarted": "Comenzar"
+  "getStarted": "Comenzar",
+  "bunker": "Bunker",
+  "bunkerAuthentication": "Autenticación Bunker",
+  "tapToOpen": "Toca para abrir: {url}",
+  "showNostrConnectQrcode": "Mostrar código QR de nostr connect",
+  "loginWithAmber": "Iniciar sesión con Amber",
+  "nostrConnectUrl": "URL de conexión Nostr",
+  "copy": "Copiar"
 }
