--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -4,7 +4,7 @@
   "newHere": "Êtes-vous nouveau ici?",
   "nostrAddress": "Adresse Nostr",
   "publicKey": "Clé publique",
-  "privateKey": "Clé privée",
+  "privateKey": "Clé privée (non sécurisé)",
   "browserExtension": "Extension de navigateur",
   "connect": "Se connecter",
   "install": "Installer",
@@ -15,5 +15,12 @@
   "publicKeyHint": "npub1...",
   "privateKeyHint": "nsec1...",
   "newToNostr": "Nouveau sur Nostr?",
-  "getStarted": "Commencer"
+  "getStarted": "Commencer",
+  "bunker": "Bunker",
+  "bunkerAuthentication": "Authentification Bunker",
+  "tapToOpen": "Appuyez pour ouvrir: {url}",
+  "showNostrConnectQrcode": "Afficher le code QR nostr connect",
+  "loginWithAmber": "Se connecter avec Amber",
+  "nostrConnectUrl": "URL de connexion Nostr",
+  "copy": "Copier"
 }
